# python-project-lvl3

./: .gitignor  Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
page_loader/: __init__.py  change_page.py  custom_exceptions.py  download.py  files.py  logger_setting.py  names.py  resources.py  web_requests.py
page_loader/logging_config/: debug_mode.yml  normal_mode.yml
page_loader/scripts/: __init__.py  page_loader.py
page_loader/tools/: argparse.py  cli.py  files.py  logger_setting.py  names.py  resources.py  web_requests.py
tests/: __init__.py  test_page_loader.py
tests/fixtures/: Fixture_settings.txt  Habr regular expressions.html  ParisLife - блог на тему фитнеса.html  evglit-github-io.html  parislife-ru-blog_files.html  parislife.html
tests/fixtures/Habr regular expressions_files/: context.js  downsize_200k_v1  downsize_200k_v1(1)  f(1).txt  f.txt  gpt.js  js  main.bundle.css  roxot-manager-engine.js  roxot-manager.js  roxot-wrapper.js  saved_resource(1).html  saved_resource(3).html  saved_resource(4).html  saved_resource.html  syncframe.html
tests/fixtures/ParisLife - блог на тему фитнеса_files/: AuthenticationService.Authenticate  code.js  common.js  f(1).txt  gtm.js  js  util.js
tests/fixtures/expected/: evglit-github-io.html
tests/fixtures/expected/evglit-github-io_files/: evglit-github-io-css-style.css
tests/fixtures/parislife-ru-blog_files_files/: f(1).txt  gtm.js  jquery.min(2).js  js
tests/fixtures/parislife_files/: f(1).txt  gtm.js  js  main.js  style.css
