[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgeny <litun-07@mail.ru>"]
packages = [
	{ include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
